--- a/style.css
+++ b/style.css
@@ -16,3 +16,16 @@ body {
     font-size: 16px;
     cursor: pointer;
   }
+
+#banner {
+    margin-top: 20px;
+    text-align: center;
+}
+
+#banner img {
+    width: 100%;
+    max-width: 1200px; /* Ograniczenie maksymalnej szerokości */
+    height: auto; /* Zachowanie proporcji */
+    border-radius: 10px; /* Zaokrąglenie rogów (opcjonalne) */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Cień (opcjonalne) */
+}
